Input change background color

--- a/src/App.scss
+++ b/src/App.scss
@@ -71,7 +71,7 @@
     input {
       height: 40px;
       width: 262px;
-      background-color: #beddea;
+      background-color: #d9e5ea;
       border: none;
       outline: none;
       padding: 0 20px;
@@ -300,7 +300,7 @@
 
 .options {
   &:hover {
-    background-color: #e7e7e7;
+    background-color: #d9e5ea;
   }
 }
 
